<resources>
    <string name="app_name">TrackDealer</string>
    <!-- Messages -->
    <string name="error_length_4">Длина должна быть больше 3 символов</string>
    <string name="error_pass_not_same">Пароли не совпадают</string>
    <string name="error_valid_regex">Можно вводить только цифры и латинские буквы</string>
    <string name="error_server_internal">Внутренняя ошибка сервера</string>
    <string name="error_request_failure">Упс, что-то пошло не так</string>

    <string name="challenge_accepted">Задание принят!</string>
    <string name="challenge_added">Новое задание добавлено!</string>

    <!-- Text -->

    <string name="singin">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="text_continue">Продолжить</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="name">Имя</string>
    <string name="email">Email</string>
    <string name="email_info">Адрес почты нужен исключительно для обратной связи (никаких писем рекламного характера или спама)</string>
    <string name="enter">Войти</string>

    <string name="permisstion_needed_title">Разрешение</string>
    <string name="permisstion_needed_text">Требуется дать разрешение, чтобы приложение работало корректно. Дать разрешение?</string>
    <string name="permisstion_needed_text_2"> Требуется дать разрешение, чтобы приостанавливать работу плеера при звонках или воспроизведении аудио. Дать разрешение?</string>
    <string name="positive">Да</string>
    <string name="negative">Нет</string>

    <string name="chart">Плейлист</string>
    <string name="chose_fav_song">Твой трек</string>
    <string name="profile">Профиль</string>

    <string name="chosed_by">Выбрал</string>
    <string name="user_tracklist">Все треки пользователя </string>
    <string name="main_chart_text">Все треки</string>
    <string name="deezer_chart_text">Любимые треки Deezer</string>
    <string name="finished_chart_text">Лучшие треки</string>
    <string name="random_chart_text">Случайные треки</string>
    <string name="user_chart_text">Треки пользователя</string>

    <string name="list_is_empty">Список пуст</string>
    <string name="current_playlist">Список воспроизведения</string>
    <string name="period_top_date_text">Лучшие треки от</string>
    <string name="your_chose">Твой выбор</string>
    <string name="change">Изменить</string>
    <string name="fav_song_empty_message">Еще не выбрал свой трек? Жми сюда!</string>
    <string name="your_track_add_in_chart">Ваш новый трек добавлен в чарт!</string>
    <string name="chose_song">Введите название трека</string>
    <string name="chose_song_title">Подтверждение выбора</string>
    <string name="chose_song_message">Вы точно хотите выбрать этот трек?</string>
    <string name="track_add_in_deezer_favourite">Песня добавлена в ваши любимые треки на Deezer ❤</string>
    <string name="track_add_in_deezer_failed">Не удалось добавить песню.</string>
    <string name="chose_what_you_like">Выбери то, что нравится</string>

    <string name="fav_song_first_chose_1">1. Выбери любимый трек</string>
    <string name="fav_song_first_chose_2">2. Получай лайки от других пользователей и ставь сам</string>
    <string name="fav_song_first_chose_3">3. Твой трек собрал больше всех лайков? Тебе доступны новые возможности приложения!</string>
    <string name="fav_song_first_chose_4">Кликни по каждой из кнопок, чтобы узнать больше о возможностях приложения</string>
    <string name="fav_song_first_chose_5">4. Слушай новую музыку каждый день и делись своими треками с другими!</string>
    <string name="song_not_chosen">Чтобы продолжить выбери трек</string>
    <string name="chose">Выбрать</string>

    <string name="info_list_title">Подсказка</string>
    <string name="info_first_start">Поздравляю, ты успешно загрузил свой трек!\nТеперь немного о приложении.\nПриложение TRACKDEALER:\nЭто все треки одним списком.\n\nЭто лучшая музыка, выбранная тобой и другими пользователями.\n\nЭто возможность каждый день найти что-то новое для себя.\n\nСлушай и оценивай треки, делись любимой музыкой, стань главным трек-дилером!</string>

    <string name="info_list">Треки, получившие больше всего лайков и меньше всего дизлайков, находятся вверху списка.
        Пользователи, чьи треки оценят лучше всех, получат доступ к новым возможностям приложения, а их треки перейдут в раздел \"Лучшие треки\".
        Определение лучших происходит раз в несколько дней.</string>
    <string name="info_deezer_list">Любимые треки твоего Deezer-аккаунта. Чтобы посмотреть список и добавить в него свой трек, нужно \n1. Подключить Deezer-аккаунт в профиле\n2. Длительное нажатие на понравившийся трек добавит его в этот список.</string>
    <string name="info_user_list">Все треки пользователя. Здесь можешь посмотреть и послушать все свои треки за всё время</string>
    <string name="info_finished_list">Здесь показаны лучшие треки пользователей за всё время, отсортированный по дате. Доступ только для пользователей со статусом TRACKDEALER</string>
    <string name="info_random_list">Случайная выборка песен из списка, возможность найти что-то новое для себя. Доступ только для пользователей со статусом TRACKDEALER</string>


    <string name="deezer_account_login">Подключить аккаунт Deezer</string>
    <string name="deezer_account_info">Подключение к Deezer позволит добавлять треки в плейлист "Любимые треки", а c аккаунтом PREMIUM или PREMIUM+ позволит Вам прослушивать треки полностью</string>
    <string name="deezer_already_login">Аккаунт Deezer подключен!</string>
    <string name="deezer_premium_account">Доступно прослушивание полных песен и добавление в плейлист "Любимые треки"</string>
    <string name="deezer_freemium_account">Можно добавлять треки в плейлист "Любимые треки", но недоступны для прослушивания полные треки (требуется статус PREMIUM или PREMIUM+)</string>
    <string name="deezer_account_logout">Действительно отключить аккаунт Deezer?</string>
    <string name="deezer_login_success">Вы залогинились в Deezer!</string>
    <string name="deezer_login_already">Уже залогинен в Deezer</string>

    <string name="congratulations_upate_status">Поздравляем! Твой трек стал лучшим, а ты получил статус: TRACKDEALER! Для тебя теперь доступны новые возможности плейлиста.</string>
    <string name="congratulations_track_likes">Поздравляем! Твой трек среди лучших на этой неделе! Пора выбрать трек поновее и снова попасть в лучшие</string>

    <string name="username">Пользователь: </string>
    <string name="user_status">Статус: </string>
    <string name="user_status_info_header">Информация</string>
    <string name="user_status_info">Статус TRACKLISTENER:\nбазовый статус для всех пользователей.\n\nСтатус TRACKDEALER:\nпозволит открыть дополнительные возможности:\n - слушать лучшие треки за всё время.
        \n - выбрать случайный набор треков и услышать что-то новое.\n\nПолучить статус TRACKDEALER просто - твой трек должен хотя бы раз попасть в число лучших.</string>

    <string name="account_logout_header">Подтверждение выхода</string>
    <string name="account_logout">Действительно хочешь выйти из TrackDealer?\n\nПри выходе автоматически будет совершен выход из Deezer-аккаунта.</string>

    <string name="text_trackdealer"><![CDATA[<p><font color="#007cd0">TRACK</font><font color="#fd7d20">DEALER</font></p>]]></string>

    <string name="ok">OK</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="exit">Выход</string>
    <string name="cont">Продолжить ></string>

    <string name="back">Назад</string>
    <string name="repeat">Повторить</string>

    <string name="register_success">Регистрация успешно завершена!</string>

    <string name="finish_but_denied">Лучшие треки прошлой недели доступны только пользователям со статусом TRACKDEALER.\n\n Подробнее: Профиль -> Информация о статусе.</string>
    <string name="random_but_denied">Выбор случайных треков доступен только пользователям со статусом TRACKDEALER.\n\n Подробнее: Профиль -> Информация о статусе.</string>

    <string name="close">Закрыть</string>


    <string name="empty"></string>
    <string name="default_duration">0:00</string>
    <string name="logout">Logout</string>
    <string name="visualizer_wf">Waveform</string>
    <string name="visualizer_fft">FFT</string>
    <string name="equalizer">Equalizer</string>
    <string name="unloggedRadios">Radios (without connection)</string>
    <string name="no_results">No results found</string>
    <string name="deezer_error_during_login">Ошибка при входе в Deezer</string>
    <string name="deezer_too_many_skips">You have skipped too many tracks in this radio. Skip will be disabled for a while</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="login_cancelled">Вход в Deezer отменен</string>
    <string name="ui_custom_track_list">This activity plays a custom list of tracks</string>
    <string name="ui_user_flow">This activity plays a custom list of tracks</string>
    <string name="bass">Bass Freqs.</string>
    <string name="treble">Treble Freqs.</string>

    <!-- Handle error -->

    <string name="handle_no_writes_for_play">Ошибка! Пользователь не имеет прав для вопроизведения.</string>
    <string name="handle_content_already_play">Ошибка! Контент уже проигрывался.</string>
    <string name="handle_invalid_token">Ошибка! Недопустимый токен потока.</string>
    <string name="handle_limit_device">Ошибка! Аккаунт Deezer используется сразу на нескольких устройствах.</string>
    <string name="handle_too_much_players">Ошибка! Слишком много плееров создано.</string>
    <string name="handle_error_player">Ошибка плеера.</string>
    <string name="handle_server_connect_error">Соединение с сервером не установлено. Проверьте соединение с интернетом.</string>
    <string name="handle_connect_error">Ошибка соединения.</string>
    <string name="handle_load_error">Ошибка при загрузке.</string>
    <string name="handle_enter_deezer_error">Не удалось войти в Deezer.</string>
    <string name="handle_no_data">Данные не загружены.</string>
    <string name="handle_required_enter_deezer">Требуется вход в Deezer аккаунт.</string>
    <string name="handle_required_permission">Необходимо разрешение.</string>
    <string name="handle_request_error">Ошибка запроса.</string>
    <string name="handle_no_data_from_server">Не удалось получить ответ от сервера. Проверьте соединение с интернетом.</string>
    <string name="handle_server_busy">Сервер перегружен.</string>
    <string name="handle_unknown_error">Неизвестная ошибка. Проверьте соединение с интернетом.</string>
    <string name="handle_user_not_found">Пользователь не найден.</string>
    <string name="handle_weak_signal">Слабые условия приема сигнала.</string>
    <string name="handle_buffer_error">Ошибка при загрузке буфера.</string>
    <string name="handle_track_play_error">Не удалось воспроизвести песню.</string>
    <string name="handle_fav_song_load_error">Не получить список любимых песен.</string>

    <string name="handle_bad_request">Неверно введены данные!</string>
    <string name="handle_excess_denied"> Доступ ограничен!</string>
    <string name="handle_error">Ошибка!</string>


    <string name="default_network_error">Возможно отсутствует подключение.</string>
    <string name="default_error">В настоящий момент операция невозможна.</string>

</resources>
