<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/register_lay_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:paddingLeft="@dimen/vertical_margin"
            android:paddingRight="@dimen/vertical_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lay_text_login"
                style="@style/TextInputLayoutAccent">

                <EditText
                    android:id="@+id/register_text_login"
                    style="@style/EditTextStyle"
                    android:hint="@string/login"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lay_text_password"
                style="@style/TextInputLayoutAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/register_text_password"
                    style="@style/EditTextStyle"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lay_text_repeat_password"
                style="@style/TextInputLayoutAccent"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <EditText
                    android:id="@+id/register_text_repeat_password"
                    style="@style/EditTextStyle"
                    android:hint="@string/repeat_password"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lay_text_email"
                style="@style/TextInputLayoutAccent">

                <EditText
                    android:id="@+id/register_text_email"
                    style="@style/EditTextStyle"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/pass_text_password_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_lay_text_email"
                android:layout_marginBottom="@dimen/vertical_margin"
                android:layout_marginLeft="@dimen/horizontal_margin"
                android:layout_marginRight="@dimen/horizontal_margin"
                android:gravity="start"
                android:text="@string/email_info"
                android:textSize="@dimen/text_size_small_10" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/register_lay_text_name"
                style="@style/TextInputLayoutAccent">

                <EditText
                    android:id="@+id/register_text_name"
                    style="@style/EditTextStyle"
                    android:hint="@string/name"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/register_btn_continue"
                style="@style/ButtonColoredAccent"
                android:layout_width="320dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/vertical_margin_x2"
                android:enabled="false"
                android:padding="12dp"
                android:text="@string/text_continue" />
        </LinearLayout>

        <include layout="@layout/progressbar" />
    </RelativeLayout>
</ScrollView>