<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.trackdealer.ui.LoginActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/dp60"
        android:paddingLeft="@dimen/vertical_margin"
        android:paddingRight="@dimen/vertical_margin">

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_lay_text_login"
            style="@style/TextInputLayoutAccent">

            <EditText
                android:id="@+id/login_text_login"
                style="@style/EditTextStyle"
                android:maxLines="1"
                android:textAlignment="center"
                android:hint="@string/login" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_lay_text_password"
            style="@style/TextInputLayoutAccent">
            <EditText android:id="@+id/login_text_password"
                style="@style/EditTextStyle"
                android:maxLines="1"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:hint="@string/password" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn_login"
            style="@style/ButtonColoredAccent"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:text="@string/singin"/>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/login_btn_register"
            style="@style/ButtonColoredAccent"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:padding="12dp"
            android:text="@string/register"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
