<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/first_chose_song_text_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin_x2"
        android:text="@string/fav_song_first_chose_1"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_main" />

    <FrameLayout
        android:id="@+id/first_chose_song_fav_song"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/first_chose_song_text_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/fav_song_first_chose_2"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_main" />

    <LinearLayout
        android:id="@+id/first_chose_song_lay_user_likes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginTop="@dimen/vertical_margin">

        <RelativeLayout
            android:id="@+id/first_chose_song_lay_dislike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/first_chose_song_image_dislike"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:layout_centerVertical="true"
                android:tint="@color/colorBlue"
                app:srcCompat="@drawable/ic_dislike" />

            <TextView
                android:id="@+id/first_chose_song_text_dislike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_toRightOf="@id/first_chose_song_image_dislike"
                android:text="123"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/text_size_main" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/first_chose_song_lay_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/horizontal_margin"
            android:layout_toRightOf="@id/first_chose_song_lay_dislike">

            <ImageView
                android:id="@+id/first_chose_song_image_like"
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp25"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp10"
                android:tint="@color/colorOrange"
                app:srcCompat="@drawable/ic_like" />

            <TextView
                android:id="@+id/first_chose_song_text_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/dp4"
                android:layout_toRightOf="@id/first_chose_song_image_like"
                android:text="1234"
                android:textColor="@color/colorOrange"
                android:textSize="@dimen/text_size_main" />
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/first_chose_song_text_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="@dimen/dp4"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/fav_song_first_chose_3"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_main" />

    <include
        android:id="@+id/layout_chart_menu"
        layout="@layout/layout_chart_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/vertical_margin" />

    <TextView
        android:id="@+id/first_chose_song_text_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_chart_menu"
        android:layout_marginBottom="@dimen/dp4"
        android:layout_marginLeft="@dimen/horizontal_margin"
        android:layout_marginRight="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin"
        android:text="@string/fav_song_first_chose_5"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/text_size_main" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/first_chose_but_cont"
        style="@style/ButtonColoredAccent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_main_height"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="@dimen/horizontal_margin"
        android:layout_marginTop="@dimen/vertical_margin_x2"
        android:text="@string/cont"
        android:textSize="@dimen/text_size_main" />

</LinearLayout>